apps/core/rancher/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-http-route
  namespace: cattle-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rancher-gateway
  hostnames:
    - "rancher.inforisk.ma"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rancher
          port: 80
          weight: 100
